# KirigamiHoneycomb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/examples/: generate_demo_assets.py
src/: FLD_test.py  FLD_test_2.py  hex.stl  honeycomb.py  svgwrite_test.py  trimesh_test.py
src/kirigami_honeycomb/: __init__.py  cli.py  cross_section.py  fold_pattern.py  honeycomb.py  mesh_io.py  svg.py  viewer.py
tests/: test_cli.py  test_cross_section.py  test_fold_pattern.py  test_honeycomb.py  test_mesh_io.py  test_svg.py
