[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kirigami-honeycomb"
version = "0.1.0"
description = "Utilities for generating kirigami honeycomb folding line diagrams"
readme = "README.md"
authors = [{ name = "Original Author" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "svgwrite>=1.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
kirigami-fld = "kirigami_honeycomb.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
